fix(css): add z-index to plugin element
Cleanup Compass import.

--- a/src/style.sass
+++ b/src/style.sass
@@ -1,5 +1,3 @@
-@import compass/css3
-
 .ima-plugin[data-ima]
   position: absolute
   top: 0
@@ -7,6 +5,7 @@
   width: 100%
   height: 100%
   text-align: left
+  z-index: 10000 /* media-control z-index is 9999 */
   .ima-ad-container[data-ima]
     position: absolute
     top: 0
